--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.3.2",
+    "autoprefixer": "^9.7.2",
+    "core-js": "^3.4.2",
+    "postcss": "^7.0.23",
     "vue": "^2.6.10"
   },
   "devDependencies": {
